clusters/talos-ottawa/apps/media/app/bazarr-4kremux/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr-4kremux
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr-4kremux
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bazarr-4kremux
    spec:
      containers:
      - name: bazarr
        image: lscr.io/linuxserver/bazarr:1.5.4
        ports:
        - name: http
          containerPort: 6767
          protocol: TCP
        volumeMounts:
        - name: movies-4k
          mountPath: /movies/4k
        - name: movies-1080p
          mountPath: /movies/1080p
        - name: movies-4kremux
          mountPath: /movies/4kremux
        - name: movies-anime
          mountPath: /movies/anime
        - name: tv-4k
          mountPath: /tv/4k
        - name: tv-1080p
          mountPath: /tv/1080p
        - name: tv-anime
          mountPath: /tv/anime
        - name: config
          mountPath: /config
      volumes:
      - name: movies-4k
        persistentVolumeClaim:
          claimName: radarr-4k-movies
      - name: movies-1080p
        persistentVolumeClaim:
          claimName: radarr-1080p-movies
      - name: movies-4kremux
        persistentVolumeClaim:
          claimName: radarr-4kremux-movies
      - name: movies-anime
        persistentVolumeClaim:
          claimName: radarr-anime-movies
      - name: tv-4k
        persistentVolumeClaim:
          claimName: sonarr-4k-tv
      - name: tv-1080p
        persistentVolumeClaim:
          claimName: sonarr-1080p-tv
      - name: tv-anime
        persistentVolumeClaim:
          claimName: sonarr-anime-tv
      - name: config
        persistentVolumeClaim:
          claimName: bazarr-4kremux-config
